# MyNotes

./: .gitignore  .gitmodules
cuda/: CMakeLists.txt  build.sh  common.h  kernel_caller.cc  kernel_caller_declare.h  kernel_utils.cu.h  kernel_utils.cuh  profiler_command.sh  run.sh
cuda/add/: CMakeLists.txt  add.cu
cuda/cmake/: cutlass.cmake  dbg_macro.cmake  third_party.cmake
cuda/element_wise/: add.cu  add_array.cu
cuda/hello_world/: hello_world.cu
cuda/kernels/: CMakeLists.txt
cuda/kernels/element_wise/: add_array.cu
cuda/kernels/elementwise/: CMakeLists.txt  add_array.cu  elementwise.cu
cuda/kernels/gemm/: CMakeLists.txt  all.cu  all.h  gemm_cublasdx.cu  gemm_cutlass.cu  gemm_naive.cu  matrix_multiply.cu
cuda/kernels/gemm_v/: CudaCoreWeightonly_1_11008_8192.ncu-rep  CudaCoreWeightonly_1_13824_5120.ncu-rep  CudaCoreWeightonly_1_4096_4096.ncu-rep  CudaCoreWeightonly_1_5120_15360.ncu-rep  CudaCoreWeightonly_1_5120_27648.ncu-rep  CudaCoreWeightonly_1_5120_5120.ncu-rep  CudaCoreWeightonly_1_8192_22016.ncu-rep  gemm.cu  gemv.cu
cuda/kernels/gemv/: gemv.cu  profile.sh
cuda/kernels/general/: CMakeLists.txt  device_query.cu  hello_world.cu
cuda/kernels/reduce/: CMakeLists.txt  reduce_sum.cu
cuda/kernels/scan/: CMakeLists.txt  histogram.cu  prefix_sum.cu
cuda/kernels/softmax/: CMakeLists.txt  softmax.cu
cuda/kernels/stencil/: one_dim_stencil.cu
cuda/kernels/transpose/: CMakeLists.txt  transpose_matrix.cu
cuda/kernels/trivial/: CMakeLists.txt
cuda/notes/: command.sh
cuda/reduce/: CMakeLists.txt
cuda_learn/: CMakeLists.txt  common.h  kernel_caller.cc  kernel_caller_declare.h  run.sh
cuda_learn/cmake/: dbg_macro.cmake
cuda_learn/kernels/: CMakeLists.txt
cuda_learn/notes/: profiler_command.sh
git/: git.sh
leetcode/: 1_array.cc
nlp/: test_transformers.py  transformer.py  学习笔记综述.ipynb
resnet50/: log  mixed_inference.pdmodel  netron_for_resnet50.py  test_convert_to_mixed_precision.py  white_mixed_inference.pdmodel
speech/: recognition.py  split.sh  translation.py
tensorrt/python/: common.py  test_matrix_multiply.py  test_shape.py  test_softmax.py
trition/: 0_add_vector.py  0_elementwise_add.py  1_fused_softmax.py  1_softmax.py  2_matmul.py  2_matmul_batched.py  2_matmul_batched_with_block_ptr.py  2_matmul_with_block_ptr.py  2_matrix_multiply.py  2_matrix_multiply_v1.py  3_flash_attention.py  3_fused_attention.py  4_matmul_with_block_ptr.py  4_transpose.py  4_transpose_batched.py  6_transpose.py  8_fused_attention.py  draft_test.py  how_to_use_flash_attention.py  references.md  test_tl_dot.py
trition/perf_a10/: fused-attention-batch4-head48-d64-fwd-causal:True.csv  matmul-performance.csv  results.html  transpose-performance.csv  vector-add-performance.csv
trition/perf_a10_cuda11.8_cudnn8.6/: fused-attention-batch4-head48-d64-fwd-causal:False.csv  matmul-batched-performance.csv  matmul-batched-with-block-ptr-performance.csv  matmul-performance.csv  matmul-with-block-ptr-performance.csv  softmax-performance.csv  transpose-batched-performance.csv
trition/perf_t4/: elementwise-add-performance.csv  matmul-batched-performance.csv  results.html  (+1 more)
(+17 files in other folders)
